# gen-t-api

./: .dockerignore  .env.example  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.debug.yml  docker-compose.yml
src/: auth.rs  database.rs  header.rs  main.rs  response.rs  routes.rs
src/database/: gif.rs  incremental.rs  token.rs
src/routes/: auth.rs  gif.rs  index.rs  jobs.rs  user.rs
