[package]
name = "gen-t-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bson = "2.6.1"
dotenvy = "0.15.7"
mongodb = "2.5.0"
rocket = {verion = "=0.5.0-rc.3", features= ["json"]}
rocket_db_pools = { version = "0.1.0-rc.3", features = ["mongodb"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
